Lots of changes and more